--- a/index.html
+++ b/index.html
@@ -4,8 +4,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="util.css">
+   <style>
+       .text-center{
+    text-align: center;
+  }
+  
+  .bg-red{
+    background:black;
+  }
+  
+  .mx-auto{
+    margin: auto;
+  }
+  
+  .flex{
+    display:flex;
+  } 
+  .flex-col{
+    flex-direction: column;
+  }
+  
+  .items-center{
+    align-items: center;
+  }
+       @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Ubuntu:wght@300&display=swap');
+html, body {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: hsl(0, 0%,95%);
+  height: 100%;
+  width: 100%;
+  font-family: 'Roboto', sans-serif; 
+}
+
+
+.button{
+  width: 66px;
+  padding: 20px;
+  margin: 0 3px;
+  border: 2px solid black;
+  border-radius: 9px;
+  cursor: pointer;
+  background-color: hsl(0, 0%,30%);
+  color: white;
+}
+
+.row{
+  margin: 8px 0;
+  /* background-color: hsl(0, 0%,15%); */
+    border-radius: 15px;
+    overflow: hidden;
+    color: white;
+}
+.row input{
+  width: 291px;
+  font-size: 20px;
+  text-align: left;
+    margin: 0;
+    padding: 10px 0px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    background-color: hsl(0, 0%,20%);
+}
+
+button:hover{
+  background-color: hsl(0, 0%,40%);
+}
+
+button:active{
+  background-color: hsl(0, 0%,50%);
+}
+
+.btn{
+  background-color: hsl(260, 100%, 50%);
+}
+
+btn:hover{
+  background-color: hsl(224, 100%, 65%);
+}
+
+btn:active{
+  background-color: hsl(224, 100%, 65%);
+}
+   </style>
 </head>
 <body>
     <div class="container flex flex-col items-center mx-auto m-w-20">
@@ -44,6 +129,28 @@
         </div>
       </div>
 
-    <script src="script.js"></script>
+    <script>
+        let string = "";
+let buttons = document.querySelectorAll('.button');
+Array.from(buttons).forEach((button)=>{
+  button.addEventListener('click', (e)=>{
+    if(e.target.innerHTML == '='){
+      string = eval(string);
+      document.querySelector('input').value = string;
+    }
+    else if(e.target.innerHTML == 'C'){
+      string = ""
+      document.querySelector('input').value = string;
+    }
+    else{ 
+    console.log(e.target)
+    string = string + e.target.innerHTML;
+    document.querySelector('input').value = string;
+      }
+  })
+})
+
+
+    </script>
 </body>
 </html>
